Closed Bug 1561636 Opened 7 years ago Closed 7 years ago

Intermittent updater failures on Win64

Categories

(Toolkit :: Application Update, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox-esr68 --- fixed
firefox69 --- fixed

People

(Reporter: acat, Assigned: acat)

References

Details

(Whiteboard: [tor 26514])

Attachments

(1 file)

Please see the original Tor ticket: https://trac.torproject.org/projects/tor/ticket/26514

libmar uses _ftelli64 and _fseeki64 which was causing updater failures on Tor Browser Win64. The Tor Browser patch uses ftello64 and fseeko64 instead for MinGW.

Component: General → Application Update
Product: Firefox → Toolkit

Avoid MinGW's _ftelli64() and _fseeki64() implementations because they
are unreliable.

Whiteboard: [tor 26514]
Priority: -- → P3

Pushed by dluca@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/98a5a4864b88
intermittent updater failures on Win64 (Error 19) r=rstrong

Keywords: checkin-needed
Status: UNCONFIRMED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69

Comment on attachment 9074224 [details]
Bug 1561636 - intermittent updater failures on Win64 (Error 19)

ESR Uplift Approval Request

Attachment #9074224 - Flags: approval-mozilla-esr68?
Assignee: nobody → acat

Comment on attachment 9074224 [details]
Bug 1561636 - intermittent updater failures on Win64 (Error 19)

Fixes updater issues for MinGW builds used by Tor. Doesn't affect builds we ship. Approved for 68.1esr.

Attachment #9074224 - Flags: approval-mozilla-esr68? → approval-mozilla-esr68+
See Also: → 1656285
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: