Bug 1561636 - intermittent updater failures on Win64 (Error 19) r=rstrong

Avoid MinGW's _ftelli64() and _fseeki64() implementations because they
are unreliable.

Differential Revision: https://phabricator.services.mozilla.com/D36037